--- a/env.example
+++ b/env.example
@@ -2,5 +2,6 @@
 POSTGRES_PASSWORD=asd
 POSTGRES_USER=projects
 
+DATABASE_URL=psql://user:password@127.0.0.1:5432/database_name
 
 DJANGO_ALLOWED_HOSTS=.todo.emizee.com
